User can upload AVATAR. Avatar saved to S3 and link saved to MySQL Avatar_ref
